# fitbit_garmin_converter

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.good  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
fitbit_garmin_converter/: cli.py
tests/: test_cli.py
tests/__snapshots__/: test_cli.ambr
tests/test_data/: weight_data1.json  weight_data2.json  weight_data_same_day.json
