[project]
name = "fitbit-garmin-converter"
version = "0.1.0"
description = "Convert Fitbit exported data to Garmin Connect format"

requires-python = "~=3.11.0"
dependencies = [
    "typer",
    "pandas",
    "uv",
    "pytest>=8.4.1",
    "syrupy>=4.9.1",
    "garth>=0.5.17,<0.6.0",
    "requests",
]
